--- a/gotify.sh.example
+++ b/gotify.sh.example
@@ -1,8 +1,8 @@
-#!/usr/local/bin/bash
+#!/bin/bash
 
 curl --request POST \
-  --url 'https://gotify.tildeverse.org/message?token=redacted' \
+  --url 'https://gotify.tildeverse.org/message?token=APIKEYHERE' \
     --header 'accept: application/json' \
       --header 'content-type: application/json' \
-        --header 'x-gotify-key: redacted' \
+        --header 'x-gotify-key: APIKEYHERE' \
           --data '{  "message": "A hero is needed in #institute",  "priority": 5,  "title": "Admin Request" }'
